--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,9 @@ body
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 300px;
-    height: 300px;
-    /* background: rgba(255,255,255,0.1); */
+    width: 1000px;
+    height: 750px;
+    background: rgba(255,255,255,0.1);
 }
 .main .navigation
 {
@@ -107,4 +107,12 @@ body
 {
     scale: 1;
     transition-delay: 1s;
+}
+.main .navigation .catalogue
+{
+    transition: 1.25s;
+}
+.main .navigation .catalogue.revolution
+{
+    transform: rotate(360deg);
 }
