--- a/css/style.css
+++ b/css/style.css
@@ -641,9 +641,17 @@ li p
     background: #4b4b4b;
 }
 
+.cataloguemenu1-2
+{
+    font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
+
+}
+
 .navi1 .detail1-2 dt{
     padding: 15px 3px;
     background: #4b4b4b;
+    
+
 }
 .navi1 .detail1-2 dt.dt-bottom{
     padding: 15px 3px;
@@ -721,7 +729,11 @@ li p
     padding: 15px 2px;
     background: #4b4b4b;
 }
+.cataloguemenu2-2
+{
+    font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
 
+}
 .navi2 .detail2-2 dt{
     padding: 15px 3px;
     background: #4b4b4b;
@@ -802,7 +814,11 @@ li p
     padding: 15px 2px;
     background: #4b4b4b;
 }
+.cataloguemenu3-2
+{
+    font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
 
+}
 .navi3 .detail3-2 dt{
     padding: 15px 3px;
     background: #4b4b4b;
@@ -888,7 +904,11 @@ li p
     padding: 15px 2px;
     background: #4b4b4b;
 }
+.cataloguemenu4-2
+{
+    font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
 
+}
 .navi4 .detail4-2 dt{
     padding: 15px 3px;
     background: #4b4b4b;
@@ -969,7 +989,11 @@ li p
     padding: 15px 2px;
     background: #4b4b4b;
 }
+.cataloguemenu5-2
+{
+    font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
 
+}
 .navi5 .detail5-2 dt{
     padding: 15px 3px;
     background: #4b4b4b;
@@ -1050,7 +1074,11 @@ li p
     padding: 15px 2px;
     background: #4b4b4b;
 }
+.cataloguemenu6-2
+{
+    font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
 
+}
 .navi6 .detail6-2 dt{
     padding: 15px 3px;
     background: #4b4b4b;
@@ -1131,7 +1159,11 @@ li p
     padding: 15px 2px;
     background: #4b4b4b;
 }
+.cataloguemenu7-2
+{
+    font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
 
+}
 .navi7 .detail7-2 dt{
     padding: 15px 3px;
     background: #4b4b4b;
@@ -1210,7 +1242,11 @@ li p
     padding: 15px 2px;
     background: #4b4b4b;
 }
+.cataloguemenu8-2
+{
+    font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
 
+}
 .navi8 .detail8-2 dt{
     padding: 15px 3px;
     background: #4b4b4b;
@@ -1290,7 +1326,11 @@ li p
     padding: 15px 2px;
     background: #4b4b4b;
 }
+.cataloguemenu9-2
+{
+    font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
 
+}
 .navi9 .detail9-2 dt{
     padding: 15px 3px;
     background: #4b4b4b;
@@ -1370,7 +1410,11 @@ li p
     padding: 15px 2px;
     background: #4b4b4b;
 }
+.cataloguemenu10-2
+{
+    font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
 
+}
 .navi10 .detail10-2 dt{
     padding: 15px 3px;
     background: #4b4b4b;
