--- a/css/style.css
+++ b/css/style.css
@@ -573,7 +573,7 @@ li p
 .main.slide
 {
     left: 200px;
-    top: 60px;
+    top: 40px;
     transition: all .5s;
 }
 
@@ -627,18 +627,17 @@ li p
 {
     font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
 }
-.navi1 .detail1 {
-    display: none;
-
-    
-}
-.navi1 .detail1.detail1denote1{
-    display: initial;
-}
-
 .navi1 .detail1 dt{
-    padding: 15px 3px;
+    position: absolute;
+    opacity: 0;
+}
+
+.navi1 .detail1.detail1denote1 dt{
+    Position: static;
     background: #4b4b4b;
+    padding: 15px 3px;
+    opacity: 1;
+    transition: .7s ease-in-out;
 }
 
 .cataloguemenu1-2
@@ -648,25 +647,22 @@ li p
 }
 
 .navi1 .detail1-2 dt{
-    padding: 15px 3px;
-    background: #4b4b4b;
-    
-
+    position: absolute;
+    opacity: 0;
 }
-.navi1 .detail1-2 dt.dt-bottom{
-    padding: 15px 3px;
+
+.navi1 .detail1-2.detail1-2denote1-2 dt{
+    Position: static;
     background: #4b4b4b;
+    padding: 15px 3px;
+    opacity: 1;
+    transition: .7s ease-in-out;
+}
+
+.navi1 .detail1-2 dt.dt-bottom{
     border-bottom: solid 1px #fff;
 }
 
-.navi1 .detail1-2 {
-    display: none;
-
-    
-}
-.navi1 .detail1-2.detail1-2denote1-2{
-    display: initial;
-}
 
 .navi2 
 {
@@ -718,40 +714,42 @@ li p
     font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
 }
 
-.navi2 .detail2 {
-    display: none;
-}
-.navi2 .detail2.detail2denote2{
-    display: initial;
+.navi2 .detail2 dt{
+    position: absolute;
+    opacity: 0;
 }
 
-.navi2 .detail2 dt{
-    padding: 15px 2px;
+.navi2 .detail2.detail2denote2 dt{
+    Position: static;
     background: #4b4b4b;
+    padding: 15px 3px;
+    opacity: 1;
+    transition: .7s ease-in-out;
 }
+
+.navi2 .detail2-2 dt{
+    position: absolute;
+    opacity: 0;
+}
+
+.navi2 .detail2-2.detail2-2denote2-2 dt{
+    Position: static;
+    background: #4b4b4b;
+    padding: 15px 3px;
+    opacity: 1;
+    transition: .7s ease-in-out;
+}
+
 .cataloguemenu2-2
 {
     font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
 
 }
-.navi2 .detail2-2 dt{
-    padding: 15px 3px;
-    background: #4b4b4b;
-}
+
 .navi2 .detail2-2 dt.dt-bottom{
-    padding: 15px 3px;
-    background: #4b4b4b;
     border-bottom: solid 1px #fff;
 }
 
-.navi2 .detail2-2 {
-    display: none;
-
-    
-}
-.navi2 .detail2-2.detail2-2denote2-2{
-    display: initial;
-}
 
 .navi3 
 {
@@ -803,40 +801,54 @@ li p
     font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
 }
 
-.navi3 .detail3 {
-    display: none;
-}
-.navi3 .detail3.detail3denote3{
-    display: initial;
+.navi3 .detail3 dt{
+    position: absolute;
+    opacity: 0;
 }
 
-.navi3 .detail3 dt{
-    padding: 15px 2px;
+.navi3 .detail3.detail3denote3 dt{
+    Position: static;
     background: #4b4b4b;
+    padding: 15px 3px;
+    opacity: 1;
+    transition: .7s ease-in-out;
 }
+
+.navi3 .detail3-2 dt{
+    position: absolute;
+    opacity: 0;
+}
+
+.navi3 .detail3-2.detail3-2denote dt{
+    Position: static;
+    background: #4b4b4b;
+    padding: 15px 3px;
+    opacity: 1;
+    transition: .7s ease-in-out;
+}
+
 .cataloguemenu3-2
 {
     font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
 
 }
 .navi3 .detail3-2 dt{
-    padding: 15px 3px;
-    background: #4b4b4b;
+    position: absolute;
+    opacity: 0;
 }
-.navi3 .detail3-2 dt.dt-bottom{
-    padding: 15px 3px;
+
+.navi3 .detail3-2.detail3-2denote3-2 dt{
+    Position: static;
     background: #4b4b4b;
+    padding: 15px 3px;
+    opacity: 1;
+    transition: .7s ease-in-out;
+}
+
+.navi3 .detail3-2 dt.dt-bottom{
     border-bottom: solid 1px #fff;
 }
 
-.navi3 .detail3-2 {
-    display: none;
-
-    
-}
-.navi3 .detail3-2.detail3-2denote3-2{
-    display: initial;
-}
 
 .navi3 .detail3 dt.ev-dt-top
 {
@@ -893,39 +905,41 @@ li p
     font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
 }
 
-.navi4 .detail4 {
-    display: none;
-}
-.navi4 .detail4.detail4denote4{
-    display: initial;
+.navi4 .detail4 dt{
+    position: absolute;
+    opacity: 0;
 }
 
-.navi4 .detail4 dt{
-    padding: 15px 2px;
+.navi4 .detail4.detail4denote4 dt{
+    Position: static;
     background: #4b4b4b;
+    padding: 15px 3px;
+    opacity: 1;
+    transition: .7s ease-in-out;
 }
+
 .cataloguemenu4-2
 {
     font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
 
 }
+
 .navi4 .detail4-2 dt{
-    padding: 15px 3px;
-    background: #4b4b4b;
+    position: absolute;
+    opacity: 0;
 }
-.navi4 .detail4-2 dt.dt-bottom{
-    padding: 15px 3px;
+
+.navi4 .detail4-2.detail4-2denote4-2 dt{
+    Position: static;
     background: #4b4b4b;
+    padding: 15px 3px;
+    opacity: 1;
+    transition: .7s ease-in-out;
+}
+
+.navi4 .detail4-2 dt.dt-bottom
+{
     border-bottom: solid 1px #fff;
-}
-
-.navi4 .detail4-2 {
-    display: none;
-
-    
-}
-.navi4 .detail4-2.detail4-2denote4-2{
-    display: initial;
 }
 
 .navi5
@@ -978,39 +992,41 @@ li p
     font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
 }
 
-.navi5 .detail5 {
-    display: none;
-}
-.navi5 .detail5.detail5denote5{
-    display: initial;
+.navi5 .detail5 dt{
+    position: absolute;
+    opacity: 0;
 }
 
-.navi5 .detail5 dt{
-    padding: 15px 2px;
+.navi5 .detail5.detail5denote5 dt{
+    Position: static;
     background: #4b4b4b;
+    padding: 15px 3px;
+    opacity: 1;
+    transition: .7s ease-in-out;
 }
+
 .cataloguemenu5-2
 {
     font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
 
 }
+
 .navi5 .detail5-2 dt{
-    padding: 15px 3px;
-    background: #4b4b4b;
+    position: absolute;
+    opacity: 0;
 }
-.navi5 .detail5-2 dt.dt-bottom{
-    padding: 15px 3px;
+
+.navi5 .detail5-2.detail5-2denote5-2 dt{
+    Position: static;
     background: #4b4b4b;
+    padding: 15px 3px;
+    opacity: 1;
+    transition: .7s ease-in-out;
+}
+
+.navi5 .detail5-2 dt.dt-bottom
+{
     border-bottom: solid 1px #fff;
-}
-
-.navi5 .detail5-2 {
-    display: none;
-
-    
-}
-.navi5 .detail5-2.detail5-2denote5-2{
-    display: initial;
 }
 
 .navi6 
@@ -1063,39 +1079,41 @@ li p
     font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
 }
 
-.navi6 .detail6 {
-    display: none;
-}
-.navi6 .detail6.detail6denote6{
-    display: initial;
+.navi6 .detail6 dt{
+    position: absolute;
+    opacity: 0;
 }
 
-.navi6 .detail6 dt{
-    padding: 15px 2px;
+.navi6 .detail6.detail6denote6 dt{
+    Position: static;
     background: #4b4b4b;
+    padding: 15px 3px;
+    opacity: 1;
+    transition: .7s ease-in-out;
 }
+
 .cataloguemenu6-2
 {
     font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
 
 }
+
 .navi6 .detail6-2 dt{
-    padding: 15px 3px;
-    background: #4b4b4b;
+    position: absolute;
+    opacity: 0;
 }
+
+.navi6 .detail6-2.detail6-2denote6-2 dt{
+    Position: static;
+    background: #4b4b4b;
+    padding: 15px 3px;
+    opacity: 1;
+    transition: .7s ease-in-out;
+}
+
 .navi6 .detail6-2 dt.dt-bottom{
-    padding: 15px 3px;
-    background: #4b4b4b;
+
     border-bottom: solid 1px #fff;
-}
-
-.navi6 .detail6-2 {
-    display: none;
-
-    
-}
-.navi6 .detail6-2.detail6-2denote6-2{
-    display: initial;
 }
 
 .navi7 
@@ -1148,39 +1166,42 @@ li p
     font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
 }
 
-.navi7 .detail7 {
-    display: none;
-}
-.navi7 .detail7.detail7denote7{
-    display: initial;
+.navi7 .detail7 dt{
+    position: absolute;
+    opacity: 0;
 }
 
-.navi7 .detail7 dt{
-    padding: 15px 2px;
+.navi7 .detail7.detail7denote7 dt{
+    Position: static;
     background: #4b4b4b;
+    padding: 15px 3px;
+    opacity: 1;
+    transition: .7s ease-in-out;
 }
+
 .cataloguemenu7-2
 {
     font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
 
 }
+
 .navi7 .detail7-2 dt{
-    padding: 15px 3px;
-    background: #4b4b4b;
+    position: absolute;
+    opacity: 0;
 }
-.navi7 .detail7-2 dt.dt-bottom{
-    padding: 15px 3px;
+
+.navi7 .detail7-2.detail7-2denote7-2 dt{
+    Position: static;
     background: #4b4b4b;
+    padding: 15px 3px;
+    opacity: 1;
+    transition: .7s ease-in-out;
+}
+
+.navi7 .detail7-2 dt.dt-bottom{
     border-bottom: solid 1px #fff;
 }
 
-.navi7 .detail7-2 {
-    display: none;   
-}
-
-.navi7 .detail7-2.detail7-2denote7-2{
-    display: initial;
-}
 
 .navi8 
 {
@@ -1231,40 +1252,43 @@ li p
 {
     font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
 }
-.navi8 .detail8 {
-    display: none;
-}
-.navi8 .detail8.detail8denote8{
-    display: initial;
-}
 
 .navi8 .detail8 dt{
-    padding: 15px 2px;
-    background: #4b4b4b;
+    position: absolute;
+    opacity: 0;
 }
+
+.navi8 .detail8.detail8denote8 dt{
+    Position: static;
+    background: #4b4b4b;
+    padding: 15px 3px;
+    opacity: 1;
+    transition: .7s ease-in-out;
+}
+
 .cataloguemenu8-2
 {
     font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
 
 }
+
 .navi8 .detail8-2 dt{
-    padding: 15px 3px;
-    background: #4b4b4b;
+    position: absolute;
+    opacity: 0;
 }
-.navi8 .detail8-2 dt.dt-bottom{
-    padding: 15px 3px;
+
+.navi8 .detail8-2.detail8-2denote8-2 dt{
+    Position: static;
     background: #4b4b4b;
+    padding: 15px 3px;
+    opacity: 1;
+    transition: .7s ease-in-out;
+}
+
+.navi8 .detail8-2 dt.dt-bottom{
     border-bottom: solid 1px #fff;
 }
 
-.navi8 .detail8-2 {
-    display: none;
-
-    
-}
-.navi8 .detail8-2.detail8-2denote8-2{
-    display: initial;
-}
 
 .navi9 
 {
@@ -1315,39 +1339,41 @@ li p
 {
     font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
 }
-.navi9 .detail9 {
-    display: none;
-}
-.navi9 .detail9.detail9denote9{
-    display: initial;
-}
 
 .navi9 .detail9 dt{
-    padding: 15px 2px;
-    background: #4b4b4b;
+    position: absolute;
+    opacity: 0;
 }
+
+.navi9 .detail9.detail9denote9 dt{
+    Position: static;
+    background: #4b4b4b;
+    padding: 15px 3px;
+    opacity: 1;
+    transition: .7s ease-in-out;
+}
+
 .cataloguemenu9-2
 {
     font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
 
 }
+
 .navi9 .detail9-2 dt{
-    padding: 15px 3px;
-    background: #4b4b4b;
+    position: absolute;
+    opacity: 0;
 }
+
+.navi9 .detail9-2.detail9-2denote9-2 dt{
+    Position: static;
+    background: #4b4b4b;
+    padding: 15px 3px;
+    opacity: 1;
+    transition: .7s ease-in-out;
+}
+
 .navi9 .detail9-2 dt.dt-bottom{
-    padding: 15px 3px;
-    background: #4b4b4b;
     border-bottom: solid 1px #fff;
-}
-
-.navi9 .detail9-2 {
-    display: none;
-
-    
-}
-.navi9 .detail9-2.detail9-2denote9-2{
-    display: initial;
 }
 
 .navi10 
@@ -1399,39 +1425,42 @@ li p
 {
     font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
 }
-.navi10 .detail10 {
-    display: none;
-}
-.navi10 .detail10.detail10denote10{
-    display: initial;
-}
 
 .navi10 .detail10 dt{
-    padding: 15px 2px;
-    background: #4b4b4b;
+    position: absolute;
+    opacity: 0;
 }
+
+.navi10 .detail10.detail10denote10 dt{
+    Position: static;
+    background: #4b4b4b;
+    padding: 15px 3px;
+    opacity: 1;
+    transition: .7s ease-in-out;
+}
+
 .cataloguemenu10-2
 {
     font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
 
 }
+
 .navi10 .detail10-2 dt{
-    padding: 15px 3px;
-    background: #4b4b4b;
+    position: absolute;
+    opacity: 0;
 }
-.navi10 .detail10-2 dt.dt-bottom{
-    padding: 15px 3px;
+
+.navi10 .detail10-2.detail10-2denote10-2 dt{
+    Position: static;
     background: #4b4b4b;
+    padding: 15px 3px;
+    opacity: 1;
+    transition: .7s ease-in-out;
+}
+
+.navi10 .detail10-2 dt.dt-bottom
+{
     border-bottom: solid 1px #fff;
-}
-
-.navi10 .detail10-2 {
-    display: none;
-
-    
-}
-.navi10 .detail10-2.detail10-2denote10-2{
-    display: initial;
 }
 
 .navi10 .detail10 dt.RF-dt-top
