--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,14 @@
     padding: 0;
     box-sizing: border-box;
 }
+html
+{
+    overflow: hidden;
+}
+body
+{
+    overflow: hidden;
+}
 li{
     list-style: none;
 }
